Add PNG social media card for Twitter/Facebook sharing

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -12,7 +12,7 @@ const {
 } = Astro.props;
 
 const fullUrl = new URL(Astro.url.pathname, Astro.site || 'https://dastuurka.com').toString();
-const ogImageUrl = new URL('/somalia-emblem.svg', Astro.site || 'https://dastuurka.com').toString();
+const ogImageUrl = new URL('/og-image.png', Astro.site || 'https://dastuurka.com').toString();
 ---
 
 <!doctype html>
